--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,14 +3,18 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #EEEEEE;
+  /* light mode chat background */
   --foreground: #171717;
+  /* light mode text color */
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    /* chat background */
+    --foreground: #0a0a0a;
+    /* ai text color */
   }
 }
 
