--- a/src/app/login.css
+++ b/src/app/login.css
@@ -88,3 +88,19 @@
     font-weight: normal;
     margin-top: 1rem;
 }
+
+.message {
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+}
+
+.message.error {
+    background-color: #f8d7da;
+    color: #721c24;
+}
+
+.message.success {
+    background-color: #d4edda;
+    color: #155724;
+}
